--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.1.disk-performance-calibration-of-oracle-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.1.disk-performance-calibration-of-oracle-mode.md
@@ -20,7 +20,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述（Oracle 模式）](../../../../../../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述（Oracle 模式）](../../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 根据业务使用场景，选择合适的命令，触发磁盘校准任务。
 
@@ -31,6 +31,12 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
      ```
 
      其中，`job_name` 为指定的后台任务名称。磁盘校准任务对应的后台任务名称为 `io_calibration`。
+
+     示例：
+
+     ```sql
+     ALTER SYSTEM RUN JOB 'io_calibration';
+     ```
 
    * 对指定 Zone 内的所有 OBServer 节点触发磁盘校准任务
 
@@ -102,7 +108,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述（Oracle 模式）](../../../../../../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述（Oracle 模式）](../../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 根据业务使用场景，选择合适的命令，主动刷新磁盘校准信息。
 
@@ -206,7 +212,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
      * `svr_ip`：指定待刷新磁盘校准信息的 OBServer 节点的 IP。
      * `svr_port`：指定待刷新磁盘校准信息的 OBServer 节点的 RPC 端口。
 
-     对指定的 OBServer 节点刷新一次磁盘校准信息的示例如下：
+     对指定 OBServer 节点的数据盘刷新一次磁盘校准信息的示例如下：
 
      ```sql
      ALTER SYSTEM REFRESH IO CALIBRATION STORAGE = DATA CALIBRATION_INFO = ("read:4K:100us:200000","write:2M:5ms:1500") SERVER = 'xx.xx.xx.1:2882';
