--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/105.gv-ob_log_stat-oracle.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/105.gv-ob_log_stat-oracle.md
@@ -13,8 +13,8 @@
 
 查询此视图的租户不同，获得的结果也不相同，具体为：
 
-- 通过系统租户查询此视图时，可以展示所有租户日志流 Palf 的状态。
-- 通过普通租户查询此视图时，只展示本租户日志流 Palf 的状态。
+* 通过系统租户查询此视图时，可以展示所有租户日志流 Palf 的状态。
+* 通过普通租户查询此视图时，只展示本租户日志流 Palf 的状态。
 
 ## 字段说明
 
@@ -38,5 +38,6 @@
 | END_SCN | NUMBER(38) | NO | 最大连续多数派的位点/最大可消费位点（SCN） |
 | MAX_LSN | NUMBER(38) | NO | 最大写入点（LSN） |
 | MAX_SCN | NUMBER(38) | NO | 最大写入点（SCN） |
-| ARBITRATION_MEMBER | VARCHAR2(128) | NO | 仲裁成员的 Server 地址 |
-| DEGRADED_LIST | VARCHAR2(1024) | NO | 开启仲裁场景下被降级的全功能副本列表 |
+| ARBITRATION_MEMBER | VARCHAR2(128) | NO | 仲裁成员的 Server 地址 <main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.1.0 版本开始引入</p></main> |
+| DEGRADED_LIST | VARCHAR2(1024) | NO | 开启仲裁场景下被降级的全功能副本列表 <main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.1.0 版本开始引入</p></main> |
+| LEARNER_LIST | CLOB | NO | 当前日志流的只读副本列表 <main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main>|
