--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/94.v-ob_log_stat-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/94.v-ob_log_stat-of-oracle-mode.md
@@ -1,20 +1,20 @@
 # V$OB_LOG_STAT
-## 功能
-展示 Palf 的状态。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>常见使用场景如下：</p>
-    <ul>
-    <li>查询日志流是否有 Leader（Leader 所在的副本）。</li>
-    <li>查询日志流的成员列表（Paxos 副本数）。</li>
-    <li>查询副本同步状态。</li>
-    <li>查询日志流日志的可回收位点。</li>
-    <li>查询日志流允许提供日志消费服务的范围（包括：LSN/SCN）。</li>
-    <li>查询 Palf 的访问模式。</li>
-    <li>其他问题定位需求。</li>
-    </ul>
-  </main>
+## 功能
+
+展示日志流 Palf 的状态，提供诸如如下信息：
+
+1. 查询日志流是否有 Leader，Leader 所在的副本。
+2. 查询日志流的成员列表，Paxos 副本数。
+3. 查询副本同步状态。
+4. 查询日志流日志的可回收位点。
+5. 查询日志流允许提供日志消费服务的范围（包括 LSN/SCN）。
+6. 查询 Palf 的访问模式。
+
+查询此视图的租户不同，获得的结果也不相同，具体为：
+
+* 通过系统租户查询此视图时，可以展示所有租户日志流 Palf 的状态。
+* 通过普通租户查询此视图时，只展示本租户日志流 Palf 的状态。
 
 ## 字段说明
 
@@ -40,3 +40,6 @@
 | END_SCN | NUMBER(38) | NO | 最大连续多数派的位点/最大可消费位点（SCN） |
 | MAX_LSN | NUMBER(38) | NO | 最大写入点（LSN） |
 | MAX_SCN | NUMBER(38) | NO | 最大写入点（SCN） |
+| ARBITRATION_MEMBER | VARCHAR2(128) | NO | 仲裁成员的 Server 地址 <main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.1.0 版本开始引入</p></main> |
+| DEGRADED_LIST | VARCHAR2(1024) | NO | 开启仲裁场景下被降级的全功能副本列表 <main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.1.0 版本开始引入</p></main> |
+| LEARNER_LIST | CLOB | NO | 当前日志流的只读副本列表 <main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main>|
