--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/67.enable_rebalance.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/67.enable_rebalance.md
@@ -7,7 +7,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>该配置项从 V4.2.0 版本开始调整为组户级配置项。</p>
+  <p>该配置项从 V4.2.0 版本开始调整为租户级配置项。</p>
 </main>
 
 | **属性** | **描述** |
@@ -25,7 +25,7 @@
 
 * 用户租户下
   * false：租户内不在进行负载均衡操作，已经在进行中的均衡操作会取消。若此时发起扩缩容操作将会报错，例如进行以下操作时：
-    * 租户的 Unit Number 增大缩小。
+    * 租户的 Unit Number 增大或缩小。
     * 第一优先级的 Primary Zone 发生变化，如果第一优先级的 Primary Zone 不发生变化，则不会报错。
     * Primary Zone 为 RANDOM 的情况下，F 副本个数发生变化。
   * true ：租户内可以执行负载均衡操作。
