420_pre2：应用开发数据读取目录调整

--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/1.use-arithmetic-operators-in-queries-of-mysql-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/1.use-arithmetic-operators-in-queries-of-mysql-mode.md
@@ -44,7 +44,7 @@ INSERT INTO item VALUES(105,'Pear','9.8');
 
 ### 在查询中使用算术操作符
 
-查询符合条件的商品数量和价格，数量乘以价格就是每类商品的支付总额，可以在 `select_list`（`select_list`：指定要查询的表达式或列名）增加一列 `t2.ol_quantity * t3.i_price`，并重命名为 `item_sum_price`。
+查询符合条件的商品数量和价格，数量乘以价格就是每类商品的支付总额，可以在 `select_list` 增加一列 `t2.ol_quantity * t3.i_price`，并重命名为 `item_sum_price`。
 
 ```sql
 obclient> SELECT t1.c_first, t1.c_last, t1.c_credit, t2.o_ol_cnt * t3.i_price item_sum_price, t2.o_entry_d, t3.i_name, t3.i_price 
