--- a/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/3.use-operators-and-functions-in-query-of-oracle-mode/1.use-arithmetic-operator-in-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/3.use-operators-and-functions-in-query-of-oracle-mode/1.use-arithmetic-operator-in-query-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 ## 示例
 
-查询出符合条件的客户购买的每个商品的数量和价格。数量乘以价格就是每类商品的支付总额，可以在 `select_list`（`select_list`：指定要查询的表达式或列名）增加一列 `t2.ol_quantity * t3.i_price`，并重命名为 `item_sum_price`。
+查询出符合条件的客户购买的每个商品的数量和价格。数量乘以价格就是每类商品的支付总额，可以在 `select_list` 增加一列 `t2.ol_quantity * t3.i_price`，并重命名为 `item_sum_price`。
 
 1. 创建 `cust` 表。
 
