--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/65.partition_balance_schedule_interval.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/65.partition_balance_schedule_interval.md
@@ -24,6 +24,6 @@ alter system set partition_balance_schedule_interval = '1h';
 系统租户下可修改任意租户的配置项信息：
 
 ```sql
-alter system set partition_balance_schedule_interval = '1h' tenant all;
-alter system set partition_balance_schedule_interval = '1h' tenant = 'mysql';
+alter system set partition_balance_schedule_interval = '1h' tenant = all;
+alter system set partition_balance_schedule_interval = '1h' tenant = 'tenant_name';
 ```
