--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
@@ -246,9 +246,9 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 ## 更多信息
 
-* 通过 `oceanbase.GV$OB_SERVERS` 视图查询资源上限值。
+* 通过 `GV$OB_SERVERS` 视图查询资源上限值。
 
-  关于 `oceanbase.GV$OB_SERVERS` 视图的详细介绍，参见 [GV$OB_SERVERS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
+  关于 `GV$OB_SERVERS` 视图的详细介绍，参见 [GV$OB_SERVERS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
 
   示例如下：
 
@@ -267,9 +267,9 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
    6 rows in set
    ```
 
-* 通过 `oceanbase.GV$OB_UNITS` 视图查询集群中所有租户的资源分配情况。
+* 通过 `GV$OB_UNITS` 视图查询集群中所有租户的资源分配情况。
 
-  关于 `oceanbase.GV$OB_UNITS` 视图的详细介绍，参见 [GV$OB_UNITS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
+  关于 `GV$OB_UNITS` 视图的详细介绍，参见 [GV$OB_UNITS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
   示例如下：
 
