--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/1.permission-classification-of-mysql.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/1.permission-classification-of-mysql.md
@@ -48,8 +48,10 @@ MySQL 模式的权限分为了 3 个级别：
 |  用户级权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
 |  用户级权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
 |  用户级权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
+|  用户级权限 | CREATE DATABASE LINK   | 创建数据库链接的权限。                                                                     |
+|  用户级权限 | DROP DATABASE LINK     | 删除数据库链接的权限。                                                                    |
 |  用户级权限 | CREATE USER            | 确定用户是否可以执行 `CREATE USER` 命令，这个命令用于创建新的 MySQL 账号。                                    |
 |  用户级权限 | PROCESS                | 确定用户是否可以通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。                                          |
-|  用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。                                            |
+|  用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。      |
 |  用户级权限 | FILE                   | 确定用户是否可以执行 `SELECT INTO OUTFILE` 和 `LOAD DATA INFILE` 命令。                           |
 |  用户级权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过 `KILL` 命令删除用户进程，使用 `SET GLOBAL` 修改全局 MySQL 变量，执行关于复制和日志的各种命令。
