--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.permission-classification-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.permission-classification-of-oracle-mode.md
@@ -94,9 +94,9 @@ Oracle 模式的权限分为两类：
 | 系统权限 | DROP TABLESPACE             | 删除表空间的权限。         |
 | 系统权限 | SHOW PROCESS                | 查看所有用户线程的权限。      |
 | 系统权限 | ALTER SYSTEM                | 修改服务器设置的权限。       |
-| 系统权限 | CREATE DATABASE LINK        | 创建数据库连接的权限。       |
-| 系统权限 | CREATE PUBLIC DATABASE LINK | 创建公共数据库连接的权限。     |
-| 系统权限 | DROP DATABASE LINK          | 删除数据库连接的权限。       |
+| 系统权限 | CREATE DATABASE LINK        | 创建数据库链接的权限。       |
+| 系统权限 | CREATE PUBLIC DATABASE LINK | 创建公共数据库链接的权限。     |
+| 系统权限 | DROP DATABASE LINK          | 删除数据库链接的权限。       |
 | 系统权限 | ALTER SESSION               | 修改会话的权限。          |
 | 系统权限 | ALTER DATABASE              | 修改数据库的权限。         |
 | 系统权限 | CREATE ANY DIRECTORY        | 创建任意目录的权限。        |
