--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/3.cancel-a-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/3.cancel-a-restore.md
@@ -1,17 +1,15 @@
 # 取消恢复
 
-在恢复租户数据的过程中，您可以通过删除租户的方式来取消恢复。
+在恢复租户数据的过程中，您可以通过 `ALTER SYSTEM CANCEL RESTORE` 语句来停止恢复，该语句会删除处于恢复状态的租户。
 
 ## 操作步骤
 
-1. 使用 `root` 用户登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录待恢复的租户所在集群的 `sys` 租户。
 
-2. 执行以下命令，立即删除待恢复数据的租户。
+2. 执行以下命令，立即取消恢复，并删除待恢复数据的租户。
 
    ```sql
-   obclient> DROP TENANT tenant_name FORCE;
+   ALTER SYSTEM CANCEL RESTORE tenant_name;
    ```
 
    其中，`tenant_name` 需要填写待恢复的租户名称。
-
-   关于删除租户的更多操作及说明信息，请参见 [删除租户](../../2.tenant-management/6.common-tenant-operations/12.delete-tenant.md)。
