--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
@@ -72,6 +72,8 @@ MySQL 模式的权限主要有以下三类：
 | 用户级权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
 | 用户级权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
 | 用户级权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
+| 用户级权限 | CREATE DATABASE LINK   | 创建数据库链接的权限。                                                                             |
+| 用户级权限 | DROP DATABASE LINK     | 删除数据库链接的权限。                                                                             |
 
 ## Oracle 租户的用户权限
 
@@ -169,9 +171,9 @@ Oracle 模式的权限主要有以下两类：
 | 系统权限 | DROP TABLESPACE             | 删除表空间的权限。         |
 | 系统权限 | SHOW PROCESS                | 查看所有用户线程的权限。      |
 | 系统权限 | ALTER SYSTEM                | 修改服务器设置的权限。       |
-| 系统权限 | CREATE DATABASE LINK        | 创建数据库连接的权限。       |
-| 系统权限 | CREATE PUBLIC DATABASE LINK | 创建公共数据库连接的权限。     |
-| 系统权限 | DROP DATABASE LINK          | 删除数据库连接的权限。       |
+| 系统权限 | CREATE DATABASE LINK        | 创建数据库链接的权限。       |
+| 系统权限 | CREATE PUBLIC DATABASE LINK | 创建公共数据库链接的权限。     |
+| 系统权限 | DROP DATABASE LINK          | 删除数据库链接的权限。       |
 | 系统权限 | ALTER SESSION               | 修改会话的权限。          |
 | 系统权限 | ALTER DATABASE              | 修改数据库的权限。         |
 | 系统权限 | CREATE ANY DIRECTORY        | 创建任意目录的权限。        |
