--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -15,6 +15,8 @@
 
 2. 配置归档目的端。
 
+   目前，OceanBase 数据库支持 NFS、阿里云 OSS 作为归档目的端。
+
    * 系统租户为指定租户配置归档目的端
 
      ```sql
@@ -32,7 +34,7 @@
    <p>对于从 OceanBase 数据库 V4.0.x 版本升级到 V4.1.0 版本的场景，版本升级后需要更改归档路径。</p>
    </main>
 
-   设置后，可通过 `DBA_OB_ARCHIVE_DEST` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
+   设置后，设置后，`sys` 租户和用户租户可分别通过 `CDB_OB_ARCHIVE_DEST` 和 `DBA_OB_ARCHIVE_DEST` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
 
    详细配置说明如下：
 
@@ -54,10 +56,12 @@
 
             当归档目的端的介质为 NFS 时，设置归档目的端的示例如下：
 
-            ```shell
-            obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive' TENANT = mysql_tenant;
+            ```sql
+            ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive' TENANT = mysql_tenant;
+            ```
 
-            obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive';
+            ```sql
+            ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive';
             ```
 
             本示例中，`file://` 表示使用 NFS 作为归档目的端的介质类型，归档路径为 `/data/nfs/backup/archive`。
@@ -85,10 +89,12 @@
 
             当归档目的端的介质为 OSS 时，设置归档目的端，并配置 `tagging` 清理模式的示例如下：
 
-            ```shell
-            obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging' TENANT = mysql_tenant;
-          
-            obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging';
+            ```sql
+            ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging' TENANT = mysql_tenant;
+            ```
+
+            ```sql
+            ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging';
             ```
 
             本示例中，`oss://` 表示使用 OSS 作为归档目的端介质类型，存储桶名 `oceanbase-test-bucket` ，在存储桶中的路径是 `/backup/archive`，同时使用 `?` 来分隔路径的其他参数，`host` 用于设置存储桶的主机地址， `access_id` 和 `access_key` 用于设置 `OSS` 的访问密钥， 清理模式设置为 `tagging`。
@@ -103,10 +109,12 @@
 
         示例如下：
 
-        ```shell
-        obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING = Optional' TENANT = mysql_tenant;
+        ```sql
+        ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING = Optional' TENANT = mysql_tenant;
+        ```
 
-        obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING = Optional';
+        ```sql
+        ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING = Optional';
         ```
 
    * 配置 `PIECE_SWITCH_INTERVAL` 属性 (可选)
@@ -115,10 +123,12 @@
 
         例如，配置归档路径且每隔一天切分一个日志 `piece` 的示例如下：
 
-        ```shell
-        obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d' TENANT = mysql_tenant;
+        ```sql
+        ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d' TENANT = mysql_tenant;
+        ```
 
-        obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d';
+        ```sql
+        ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d';
         ```
 
 ### 配置后的注意事项及说明
@@ -135,8 +145,8 @@
 
 您需要重新执行以下语句进行修改。
 
-```shell
-obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory PIECE_SWITCH_INTERVAL=2d' TENANT = mysql_tenant;
+```sql
+ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory PIECE_SWITCH_INTERVAL=2d' TENANT = mysql_tenant;
 ```
 
 ## 设置归档目的端状态
@@ -165,8 +175,8 @@ obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nf
 
      语句如下：
 
-     ```shell
-     obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='ENABLE';
+     ```sql
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='ENABLE';
      ```
 
      设置后，在该租户打开归档模式后，将会开始归档任务，将日志归档到该目的端指定的路径中。若在设置前已经处于归档模式，将会自动开始归档任务。
@@ -175,8 +185,8 @@ obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nf
   
      语句如下：
 
-     ```shell
-     obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='DEFER';
+     ```sql
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='DEFER';
      ```
 
      设置后，若该租户有正在进行的归档任务，将会暂停归档。暂停归档后，可以再设置目的端状态为 `ENABLE` 来继续归档。
