--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -19,6 +19,8 @@
 
 2. 配置备份目的端。
 
+   目前，OceanBase 数据库支持 NFS、阿里云 OSS 作为备份目的端。
+
    * 系统租户为指定租户配置备份目的端
 
      ```sql
@@ -78,10 +80,12 @@
 
       设置备份目的端并配置备份文件的清理模式的示例如下：
 
-      ```shell
-      obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete' TENANT = mysql_tenant;
+      ```sql
+      ALTER SYSTEM SET DATA_BACKUP_DEST = 'oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete' TENANT = mysql_tenant;
+      ```
 
-      obclient [(none)]> ALTER SYSTEM SET data_backup_dest='oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
+      ```sql
+      ALTER SYSTEM SET data_backup_dest='oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
       ```
 
 3. 配置成功后，`sys` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
@@ -92,6 +96,7 @@
    TENANT_ID: 1002
         NAME: data_backup_dest
        VALUE: file:///data/nfs/backup/data
+   1 rows in set
    ```
 
 ## 配置后的注意事项及说明
