--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md
@@ -64,6 +64,56 @@ Query OK, 0 rows affected (0.10 sec)
 <p>基于性能和后期维护的需要，建议建表时为表设计主键或者唯一键。如果没有合适的字段作为主键，可以为表增加一个数值列作为主键，并使用 Oracle 租户的序列为该列填充值。有关序列的介绍请参见 <a href="../5.management-sequence-of-oracle-mode.md">管理序列</a>。</p>
 </main>
 
+## 创建复制表
+
+复制表是 OceanBase 数据库的一种特殊表。这种表可以在任意一个“健康”的副本上读取到数据的最新修改。对于写入频率要求较低、读操作延迟和负载均衡要求较高的用户来说，复制表是一种很好的选择。
+
+当用户创建一个复制表后，所在租户的所有 OBServer 节点内都会创建一个复制表的副本，这些副本中有一个副本会被选为 Leader，接受写请求，其余的副本只能接受读请求。
+
+所有的副本都需要向 Leader 汇报状态，主要是副本的回放进度，即数据同步的进度。一般来说，Follower 的回放进度会略落后于 Leader，只要落后的幅度没有超过一个阈值，Leader 就会认为副本处于“健康”的状态，可以快速回放出 Leader 上的修改。Leader 认为某个副本在一定时间内“健康”后，会授予 Follower 一段时间的 Lease。通俗的说，Leader 在接下来的一段时间内“信任” Follower 会保持“健康”状态，并且可以提供强一致性读服务。在这个“信任”期内，Leader 的每一个复制表事务提交前都会确认 Follower 的回放进度。Follower 回放出本事务的修改后，Leader 才会汇报用户，事务提交成功。此时，用户在 Follower 上可以读到刚刚提交的事务的修改。
+
+复制表功能在 OceanBase 数据库 V3.x 版本上就已经存在，而对于 V4.x 版本，由于 OceanBase 数据库的架构有了比较大的变化，V4.x 复制表为了适应单机日志流的新架构，构建了基于分区的可读版本号校验以及基于日志流的 Lease 授予机制，用于保证强一致性读的正确性。
+
+另外，v4.x 版本的复制表功能完善了切主不 Kill 事务的能力，在用户或负载均衡发起 Leader 切换时，未提交的复制表事务不会像 V3.x 版本一样无法继续，而是可以在切主后继续执行。对比 V3.x 版本，V4.x 的复制表功能也有着更好的写事务性能和更强的容灾能力，副本宕机对于读操作的影响更低。
+
+创建复制表的语法是在 `CREATE TABLE` 语句后增加 `DUPLICATE_SCOPE` 选项，仅用户租户可以创建复制表，`sys` 租户无法创建复制表。创建复制表的 SQL 语句如下：
+
+```sql
+CREATE TABLE table_name column_definition DUPLICATE_SCOPE='none | cluster';
+```
+
+其中，`DUPLICATE_SCOPE` 参数用来指定复制表的属性，取值如下：
+
+* `none`：表示该表是一个普通表。
+* `cluster`：表示该表是一个复制表，Leader 需要将事务复制到当前租户的所有 F 副本及 R 副本。
+
+创建表时，如果不指定 `DUPLICATE_SCOPE`，则默认值为 `none`。 目前，OceanBase 数据库仅支持 `cluster` 级别的复制表。
+
+```sql
+CREATE TABLE dup_t1 (c1 NUMBER,c2 NUMBER) DUPLICATE_SCOPE= 'cluster';
+```
+
+当某个租户的第一个复制表被创建时，系统会同时创建一个特殊的日志流——广播日志流。之后新建的复制表都会创建到广播日志流上。广播日志流与普通日志流的不同之处在于，广播日志流会自动地在租户内的每个 OBServer 节点上都部署一个副本，保证在理想情况下，复制表可以在任意一个 OBServer 节点上提供强一致性读。您可以通过以下 SQL 查看租户的复制表所在的广播日志流：
+
+```sql
+SELECT * FROM sys.DBA_OB_LS WHERE flag LIKE "%DUPLICATE%";
+```
+
+查询结果的示例如下。
+
+```shell
++-------+--------+--------------+---------------+-------------+---------------------+----------+---------------------+---------------------+-----------+
+| LS_ID | STATUS | PRIMARY_ZONE | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        | FLAG      |
++-------+--------+--------------+---------------+-------------+---------------------+----------+---------------------+---------------------+-----------+
+|  1003 | NORMAL | z1;z2        |             0 |           0 | 1684982852976428261 |     NULL | 1684983282912048623 | 1684983282912048623 | DUPLICATE |
++-------+--------+--------------+---------------+-------------+---------------------+----------+---------------------+---------------------+-----------+
+1 rows in set
+```
+
+示例中，`LS_ID` 为 `1003` 的日志流即为广播日志流，当前租户的所有复制表都创建在该日志流上。有关广播日志流的更多介绍，请参见 [副本介绍](../../../../../6.manage/3.replica-management/1.replica-introduction.md)。
+
+复制表创建成功后，可以与普通表一样进行插入和读写操作。不同的是，对于读请求，如果使用 Proxy 的方式连接数据库，则读请求可能会路由到任意一个 OBServer 节点执行；如果是通过直连方式连接数据库，则只要本地副本可读，系统就会在直连的 OBServer 节点上执行读请求。更多数据库连接方式的介绍，请参见 [连接方式概述](../../../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+
 ## 复制已有表的数据创建新表
 
 通过 `CREATE TABLE AS SELECT` 语句复制表的基本数据类型和数据，但不包含约束、索引和非空等属性。
