--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/22.normal-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/22.normal-of-mysql-mode.md
@@ -19,7 +19,7 @@ NORMAL(<mean> , <stddev> , <gen>)
 
 ## 示例
 
-如下示例为对 100 万个符合正态分布的随机数值只保留小数点后一位并统计数量。
+如下示例为对 100 万个符合正态分布的随机数值进行取值，只保留小数点后一位，并统计数量。
 
 ```shell
 obclient> SELECT v, COUNT(*) FROM (SELECT ROUND(NORMAL(3, 0.1, RANDOM()), 1) v FROM TABLE(GENERATOR(1000000))) x GROUP BY v ORDER BY v;
