--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/16.generator-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/16.generator-of-mysql-mode.md
@@ -12,6 +12,10 @@ GENERATOR(N)
 
 Table function 是一种在SQL语言中使用的函数，它能够返回一张数据表作为结果。与传统的 SQL 函数只能返回标量值不同，Table Function 可以返回多行、多列的数据集。 
 
+table(generator(N)) 并不真的生成任何数据，它只会产生连续 N 个 “行”，如果需要生成数据，需要在 select 后面添加具体的表达式，如常量、变量、函数、UDF 等。
+table(generator(N)) 可以用于并行执行，如并行SELECT、并行 DML 等，但是负责读取table(generator(N)) 生成行的线程只会有一个，也就是说，包含 table(generator(N)) 的 DFO 的 DOP=1
+
+
 ## 示例
 
 如下示例为使用 `GENERATOR()` 函数生成符合条件的随机数。
