--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/29.randstr-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/29.randstr-of-mysql-mode.md
@@ -11,8 +11,8 @@ RANDSTR(N, gen)
 该函数按照指定长度生成一个随机字符串，字符串中的字符包含 `A-Z`、`a-z` 和 `0-9`。
 
 * `N` 为生成的随机字符串长度：
-  * 当 `N <` 0 时，返回 `NULL`。
-  * 当 `N = 0` 时，返回空串。
+  * 当 `N < 0` 时，返回 `NULL`。
+  * 当 `N = 0` 时，返回空字符串。
   * 当 `N > 0` 并且 `N <= max_allowed_packet` 时 ，返回长度为 N 的随机字符串。
   * 当 `N > max_allowed_packet` 时，返回 `NULL`。其中 `max_allowed_packet` 为系统变量，默认值为 4194304。
 * `gen` 为分布函数，可取值如下：
@@ -51,7 +51,7 @@ obclient> SELECT RANDSTR(10, RANDOM()) FROM TABLE(GENERATOR(7));
 7 rows in set 
 ```
 
-`RANDSTR()` 配合 `gen` 参数使用，可以控制生成的随机字符串的频率。如下示例中，生成 1000 个长度为 1 的字符串，它们的分布符合 zipf 分布规律。
+`RANDSTR()` 通过 `gen` 参数可以控制生成的随机字符串的频率。如下示例中，生成 1000 个长度为 1 的字符串，它们的分布符合 zipf 分布规律。
 
 ```shell
 obclient> SELECT RANDSTR(1, ZIPF(1, 10, RANDOM())) s, COUNT(*) FROM TABLE(GENERATOR(1000)) GROUP BY s ORDER BY 1 ASC;
@@ -72,7 +72,7 @@ obclient> SELECT RANDSTR(1, ZIPF(1, 10, RANDOM())) s, COUNT(*) FROM TABLE(GENERA
 10 rows in set 
 ```
 
-`RANDSTR()` 函数通过控制 `N` 参数的大小，可以生成长度不同的字符串。
+`RANDSTR()` 函数通过控制 `N` 参数的大小，可以生成长度不同的字符串，如下例所示。
 
 ```shell
 obclient> SELECT RANDSTR(5, 40) FROM DUAL;
@@ -108,7 +108,7 @@ obclient> SELECT RANDSTR(-1, 40) FROM DUAL;
 1 row in set 
 ```
 
-当 `gen` 为常量时，反复执行 `RANDSTR()` 函数，会生成相同的随机字符串。
+当 `gen` 为常量时，反复执行 `RANDSTR()` 函数，会生成相同的随机字符串，如下例所示。
 
 ```shell
 obclient> SELECT RANDSTR(10, 1442) FROM TABLE(GENERATOR(7));
