--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/50.zipf-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/50.zipf-of-mysql-mode.md
@@ -8,7 +8,7 @@ ZIPF(<s> , <N> , <gen>)
 
 ## 说明
 
-该函数返回一个符合齐夫分布（Zipf-distributed）的整数，取值范围为 [0, N)，分区的特征指数为 s。
+该函数返回一个符合齐夫分布（Zipf-distributed）的整数，取值范围为 [0, N)，分区的特征指数为 `s`。
 
 * `s` 为特征指数，`s` 越大生成的序列越倾斜。将序列绘制成曲线时，曲线越陡峭。
 * `s` 和 `N` 取值要求：必须是一个标量值，不随行迭代而变。例如，整形或浮点型常量、标量函数等，PL 里还可以是 `@v1`、`1+@v3` 等。`s` 的取值范围为 [1, +∞)，`N` 的取值范围为 [1，16777215]。
@@ -16,6 +16,8 @@ ZIPF(<s> , <N> , <gen>)
 * `gen` 是一个数值生成函数，通常使用 `RANDOM()` 函数生成。如果传入值是一个常量，则 `zipf()` 函数返回值也为一个定值。
 
 ## 示例
+
+如下示例为使用 `ZIPF()` 函数返回符合齐夫分布的整数。
 
 ```shell
 obclient> SELECT ZIPF(1, 10, RANDOM()) FROM TABLE(GENERATOR(6));
@@ -51,4 +53,88 @@ obclient> SELECT ZIPF(ABS(-1), 23, RANDOM()) FROM DUAL;
 |                           9 |
 +-----------------------------+
 1 row in set 
+```
+
+`ZIPF()` 函数的 `s` 取值对分布存在影响，示例如下。
+
+```shell
+obclient> SELECT  COUNT(*), ZIPF(1, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
++----------+------+
+| count(*) | v    |
++----------+------+
+|      372 |    9 |
+|      395 |    8 |
+|      411 |    7 |
+|      456 |    6 |
+|      566 |    5 |
+|      662 |    4 |
+|      862 |    3 |
+|     1162 |    2 |
+|     1694 |    1 |
+|     3420 |    0 |
++----------+------+
+10 rows in set 
+
+obclient> SELECT COUNT(*), ZIPF(2, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
++----------+------+
+| count(*) | v    |
++----------+------+
+|       63 |    9 |
+|       89 |    8 |
+|      104 |    7 |
+|      120 |    6 |
+|      177 |    5 |
+|      237 |    4 |
+|      411 |    3 |
+|      717 |    2 |
+|     1601 |    1 |
+|     6481 |    0 |
++----------+------+
+10 rows in set 
+
+obclient> SELECT COUNT(*), ZIPF(3, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
++----------+------+
+| count(*) | v    |
++----------+------+
+|        7 |    9 |
+|       12 |    8 |
+|       18 |    7 |
+|       29 |    6 |
+|       49 |    5 |
+|       67 |    4 |
+|      118 |    3 |
+|      339 |    2 |
+|     1006 |    1 |
+|     8355 |    0 |
++----------+------+
+10 rows in set 
+
+obclient> SELECT COUNT(*), ZIPF(4, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
++----------+------+
+| count(*) | v    |
++----------+------+
+|        2 |    8 |
+|        5 |    6 |
+|        5 |    7 |
+|       11 |    5 |
+|       18 |    4 |
+|       48 |    3 |
+|       96 |    2 |
+|      592 |    1 |
+|     9223 |    0 |
++----------+------+
+9 rows in set 
+
+obclient> SELECT COUNT(*), ZIPF(5, 10, RANDOM()) v FROM TABLE(GENERATOR(10000)) GROUP BY v ORDER BY 1;
++----------+------+
+| count(*) | v    |
++----------+------+
+|        1 |    4 |
+|        2 |    5 |
+|       10 |    3 |
+|       45 |    2 |
+|      288 |    1 |
+|     9654 |    0 |
++----------+------+
+6 rows in set 
 ```
