--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/40.uniform-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/1.numeric-functions-of-oracle-mode/40.uniform-of-oracle-mode.md
@@ -11,7 +11,7 @@ UNIFORM(<min> , <max> , <gen>)
 该函数返回一个符合均匀分布（Uniform Distribution）的整数或浮点数。
 
 * `min`, `max` 的取值必须是标量值，不随行迭代而变。例如，常量、标量函数等。PL 里还可以是 `@v1`、`1+@v3` 等。
-* MySQL 模式下，当 `min` 或 `max` 均为整数时，`UNIFORM()` 函数的输出结果为整数；否则，`UNIFORM()` 函数的输出结果为浮点数。
+* Oracle 模式下，无论 `min`、`max` 是否为整数，都当做 `NUMBER` 类型处理，`UNIFORM()` 函数的输出结果为浮点数。如果希望生成整数，可以配合 `FLOOR()` 函数使用。
 * `gen` 是一个数值生成函数，通常使用 `RANDOM()` 函数生成。如果传入值是一个常量，则 `UNIFORM()` 函数返回值也为一个定值。
 
 ## 示例
