--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/1.partitioned-replica-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/1.partitioned-replica-overview.md
@@ -28,18 +28,9 @@ OceanBase 数据库支持以下四种类型的副本：
 
 * 全能型副本（FULL/F）
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>V4.0.0/V4.1.0 版本仅支持该副本类型。</p>
-  </main>
-
-* 日志型副本（LOGONLY/L）
-
-* 加密投票型副本（ENCRYPTVOTE/E）
-
 * 只读型副本（READONLY/R）
 
-全能型、日志型或加密投票型副本又称为 Paxos 副本，对应的副本可构成 Paxos 成员组；而只读型副本又称为非 Paxos 副本，对应的副本不可构成 Paxos 成员组。
+全功能型副本又称为 Paxos 副本，对应的副本可构成 Paxos 成员组；而只读型副本又称为非 Paxos 副本，对应的副本不可构成 Paxos 成员组。
 
 ## 分布式一致性协议
 
