--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-remove-a-zone.md
@@ -51,6 +51,8 @@ zone_option:
 obclient> ALTER SYSTEM ADD ZONE zone1;
 ```
 
+更多添加 Zone 的详细操作，请参见 [添加 Zone](../../../../../6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md)。
+
 ## 删除 Zone
 
 删除 Zone 的 SQL 语句如下：
