--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/19.manage-tenant-variables.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/19.manage-tenant-variables.md
@@ -60,52 +60,34 @@ obclient> SELECT * FROM INFORMATION_SCHEMA.SESSION_VARIABLES WHERE VARIABLE_NAME
 
 设置 Session 级别的变量仅对当前 Session 有效，对其他 Session无效。设置 Global 级别的变量对当前 Session 无效，需要重新登录建立新的 Session 才会生效。
 
-设置 Session/Global 级别变量语句的语法如下：
+### 设置 Session 级别变量
 
-* 设置 Session 级别变量
+* MySQL 模式
 
   ```sql
   SET [SESSION] VARIABLE_NAME = 'VALUE';
   ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>Oracle 模式还可以通过 <code>ALTER SYSTEM SESSION SET VARIABLE_NAME = 'VALUE';</code> 语句设置 Session 级别的变量。</p>
-  </main>
-
-* 设置 Global 级别变量
+* Oracle 模式
 
   ```sql
-  SET GLOBAL VARIABLE_NAME = 'VALUE';
+  SET [SESSION] VARIABLE_NAME = 'VALUE';
   ```
 
-  <main id="notice" type='explain'>
-  <h4>说明</h4>
-  <p>Oracle 模式还可以通过 <code>ALTER SYSTEM  SET VARIABLE_NAME = 'VALUE';</code> 语句设置 Global 级别的变量。</P>
-  </main>
+  或者
 
-  其中，MySQL 模式设置 Global 级别变量要求当前用户拥有 `SUPER` 权限或 `ALTER SYSTEM` 权限。
+  ```sql
+  ALTER SESSION SET VARIABLE_NAME = 'VALUE';
+  ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>
-    <p>Oracle 模式下，查看权限的相关操作请参见 <a href="9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md">查看用户权限</a>。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 <a href="9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md">修改用户权限</a>。</p>
-    </li>
-    <li>
-    <p>MySQL 模式下，查看当前拥有权限的操作请参见 <a href="9.manage-users-and-permissions/3.mysql-mode/4.view-the-user-permissions-of-mysql-mode.md">查看用户权限</a>。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 <a href="9.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-for-mysql-tenant-of-mysql-mode.md">修改用户权限</a>。</p>
-    </li>
-    </ul>
-  </main>
-
-示例：
+示例如下：
 
 ```sql
-obclient> SET ob_query_timeout = 20000000;
+SET ob_query_timeout = 20000000;
 
-obclient> SET SESSION ob_query_timeout = 20000000;
+SET SESSION ob_query_timeout = 20000000;
 
-obclient> SET GLOBAL ob_query_timeout = 20000000;
+ALTER SESSION SET ob_query_timeout = 20000000;
 ```
 
 对于变量中类型为 `INT`, 并且在 `SHOW VARIABLES` 命令中显示 `ON/OFF` 或者 `True/False`的变量，可以通过如下任意方法设置变量值。
@@ -117,6 +99,46 @@ obclient> SET @@foreign_key_checks = 1;
 ```
 
 以上两种方式的 Session 级别变量的设置是等效的。
+
+### 设置 Global 级别变量
+
+设置 Global 级别变量前，请确认当前用户具备以下权限：
+
+* MySQL 模式的用户需要拥有 `SUPER` 权限或 `ALTER SYSTEM` 权限。
+
+  MySQL 模式下，查看当前拥有权限的操作请参见 [查看用户权限](9.manage-users-and-permissions/3.mysql-mode/4.view-the-user-permissions-of-mysql-mode.md)。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](9.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-for-mysql-tenant-of-mysql-mode.md)。
+
+* Oracle 模式的用户需要拥有 `ALTER SYSTEM` 权限。
+
+  Oracle 模式下，查看权限的相关操作请参见 [查看用户权限](9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md)。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md)。
+
+设置 Global 级别变量的语句如下：
+
+* MySQL 模式
+
+  ```sql
+  SET GLOBAL VARIABLE_NAME = 'VALUE';
+  ```
+
+* Oracle 模式
+
+  ```sql
+  SET GLOBAL VARIABLE_NAME = 'VALUE';
+  ```
+
+  或者
+
+  ```sql
+  ALTER SYSTEM SET VARIABLE_NAME = 'VALUE';
+  ```
+
+示例：
+
+```sql
+SET GLOBAL ob_query_timeout = 20000000;
+
+ALTER SYSTEM SET VARIABLE_NAME = 'VALUE';
+```
 
 ## 相关文档
 
