--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/5.locality-management/3.modify-the-tenant-s-locality.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/5.locality-management/3.modify-the-tenant-s-locality.md
@@ -2,6 +2,8 @@
 
 OceanBase 数据库支持修改租户级的 Locality。
 
+## 注意事项
+
 关于租户的 Locality，需要注意以下规则：
 
 * 租户的 Locality 不可以为空。
@@ -9,22 +11,48 @@ OceanBase 数据库支持修改租户级的 Locality。
 * 在旧的一轮租户 Locality 没有完成变更时，新一轮的租户 Locality 变更不允许被执行。
 
   <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>更多 Locality 的使用规则，参见 <a href="../5.locality-management/1.tenant-locality-overview.md">Locality 概述</a>。</p>
+  <h4>说明</h4>
+  <p>更多 Locality 的使用规则，参见 <a href="1.tenant-locality-overview.md">Locality 概述</a>。</p>
   </main>
 
-变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 节点资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
+* 变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 节点资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
 
-有关 Zone 上资源单元和资源池的状态的检查方法，请参见 [查看集群的资源信息](../../2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+  有关 Zone 上资源单元和资源池的状态的检查方法，请参见 [查看集群的资源信息](../../2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+
+## 修改 Locality
+
+修改租户的 Locality 通常用于增加或减少副本、修改副本类型等场景。
 
 修改租户的 Locality 的语法如下：
 
 ```sql
-ALTER TENANT 'TENANT_NAME' SET LOCALITY = 'locality_description'
+ALTER TENANT TENANT_NAME SET LOCALITY = 'locality_description';
 ```
 
-将租户 test_tenant 的 Locality 修改为 `F{1}@z1,F{1}@z2,F{1}@z3,F{1}@z4` 的示例如下：
+`locality_description` 的格式为 `replica_type{量词}@zone_name`，其中：
 
-```sql
-obclient> ALTER TENANT test_tenant SET LOCALITY = 'F{1}@z1,F{1}@z2,F{1}@z3,F{1}@z4';
-```
+* `replica_type` 为副本类型名，支持全名和简写。例如，全功能型副本为 FULL 或 F；只读型副本为 READONLY 或 R。
+
+* 量词：不指定量词时，表示一个副本。用 `{n}` 表示 n 个副本，一个分区在一个 Zone 中最多有一个全功能型副本。
+
+* `zone_name`： Zone 名称。
+
+示例：
+
+* 将租户 `test_tenant` 的 Locality `F@z1,F@z2,F@z3,F@z4 F@z5` 修改为 `F@z1,F@z2,F@z3,F@z4`。
+
+  ```sql
+  ALTER TENANT test_tenant SET LOCALITY = 'F@z1,F@z2,F@z3,F@z4';
+  ```
+
+* 将租户 `test_tenant` 的 Locality `F@z1,F@z2,F@z3,F@z4 F@z5` 修改为 `F@z1,F@z2,F@z3,F@z4,R@z5`。
+
+  ```sql
+  ALTER TENANT test_tenant SET LOCALITY = 'F@z1,F@z2,F@z3,F@z4，R@z5';
+  ```
+
+  或者
+
+  ```sql
+  ALTER TENANT test_tenant SET LOCALITY = 'F@z1,F@z2,F@z3,F@z4，READONLY@z5';
+  ```
