--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -9,7 +9,7 @@
 
   <main id="notice" type='notice'>
    <h4>注意</h4>
-   <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</br>设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
+   <p>设置 Global 级别变量时，对于 MySQL 租户，要求当前用户拥有 <code>SUPER</code> 权限或 <code>ALTER SYSTEM<code> 权限；对于 Oracle 租户，要求当前用户拥有 <code>ALTER SYSTEM<code> 权限。</br>设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
   </main>
 
 下文示例中的系统变量 `ob_query_timeout` 用于设置对 SQL 语句进行查询操作的超时时间，单位是微秒。在进行大数据查询操作时，就可以通过调大系统变量 `ob_query_timeout` 的值，避免查询超时导致语句执行失败。
@@ -42,6 +42,11 @@
     obclient [oceanbase]> SET ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
+
+    <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>Oracle 模式还可以通过 <code>ALTER SESSION SET ob_query_timeout = 20000000;</code> 语句修改 Session 级别的变量值。</p>
+    </main>
 
 4. 查看修改结果。
 
@@ -83,6 +88,11 @@
     obclient [oceanbase]> SET GLOBAL ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
+
+    <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>Oracle 模式还可以通过 <code>ALTER SYSTEM SET ob_query_timeout = 20000000;</code> 语句修改 Global 级别的变量值。</P>
+    </main>
 
 4. 查看修改结果。
 
