--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/2.memory-related-parameters.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/2.memory-related-parameters.md
@@ -2,10 +2,10 @@
 
 OceanBase 数据库支持通过参数来设置和管理内存的使用。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>有关以下提到的参数的详细介绍，请参见 <a href="../../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md">系统配置项</a> 章节。</p>
-  </main>
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>有关以下提到的参数的详细介绍，请参见 <a href="../../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md">系统配置项</a> 章节。</p>
+</main>
 
 ## OBServer 节点总内存
 
@@ -15,7 +15,7 @@ OceanBase 数据库支持通过参数来设置和管理内存的使用。
 
 * memory_limit：绝对数值。
 
-当 memory_limit 非 0 时，使用 memory_limit 作为上限，否则使用 memory_limit_percentage 计算后的值作为上限。
+当 `memory_limit` 不为 `0M` 时，使用 `memory_limit` 作为上限，否则使用 memory_limit_percentage 计算后的值作为上限。
 
 ## 高优先级预留内存
 
@@ -25,9 +25,9 @@ OceanBase 数据库支持通过参数来设置和管理内存的使用。
 
 ## 500 租户内存
 
-表示 500 租户预留内存，可以通过 system_memory 参数进行设置。
+表示 500 租户预留内存，可以通过 `system_memory` 参数进行设置。
 
-注意它不是 limit 的语义，目前的实现上 500 租户实际可使用内存是可能突破 system_memory 的，但其他租户可使用内存不会超过 OBServer 节点总内存（即 system_memory 的值）。
+注意它不是 limit 的语义，目前的实现上 500 租户实际可使用内存是可能突破 `system_memory` 的，但其他租户可使用内存不能超过 `memory_limit - system_memory` 的值。
 
 ## 业务租户内存
 
