--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/2.all-round-replica.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/2.all-round-replica.md
@@ -1,16 +1,16 @@
 # 全能型副本
 #docslug#/oceanbase-database/oceanbase-database/V4.0.0/all-round-replica
-全能型副本是目前最广泛使用的副本类型，它拥有事务日志、Memable 和 SSTable 等全部完整的数据和功能。
+全功能型副本是目前最广泛使用的副本类型，它拥有事务日志、MemTable 和 SSTable 等全部完整的数据和功能。
 
-全能型副本具备以下特点：
+全功能型副本具备以下特点：
 
 * 是目前最广泛使用的副本类型，它拥有事务日志、MemTable 和 SSTable 等全部完整的数据和功能。
 
 * 可以随时快速切换为 Leader 对外提供服务。
 
-* 可以构成 Paxos 成员组，并且要求 Paxos 成员组多数派必须为全能型副本。
+* 可以构成 Paxos 成员组，并且要求 Paxos 成员组多数派必须为全功能型副本。
 
-* 可以转换为除加密投票型副本以外的任意副本类型。
+* 可以转换为只读型副本。
 
 更多特性及其说明如下表所示。
 
@@ -24,4 +24,4 @@
 | 恢复为 Leader 的时间 | 快                           |
 | 资源成本           | 高                           |
 | 服务             | Leader 提供读写，Follower 可非一致性读 |
-| 副本类型转换限制       | 可转换为除加密投票型副本以外的任意副本类型       |
+| 副本类型转换限制       | 可转换为只读型副本       |
