--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/3.maximum-database-memory.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/3.maximum-database-memory.md
@@ -8,7 +8,7 @@ OceanBase 数据库提供以下两种方式来设置自身内存的上限：
 
 * 按照计算机器总内存上限的百分比计算自身可以使用的总内存，由 `memory_limit_percentage` 参数配置。
 
-* 直接设置 OceanBase 数据库可用内存的上限，由 `memory_limit` 参数配置。其中 `memory_limit` 参数值为 0 时，使用百分比的配置方式，否则使用绝对值的配置方式。
+* 直接设置 OceanBase 数据库可用内存的上限，由 `memory_limit` 参数配置。其中 `memory_limit` 参数值为 `0M` 时，使用百分比的配置方式，否则使用绝对值的配置方式。
 
 ## 使用示例
 
@@ -16,14 +16,14 @@ OceanBase 数据库提供以下两种方式来设置自身内存的上限：
 
 |    示例    | **memory_limit_percentage** | **memory_limit** | **OceanBase 数据库内存上限** |
 |----------|-----------------------------|------------------|-----------------------|
-| **示例 1** | 80                          | 0                | 80 GB                 |
+| **示例 1** | 80                          | 0M               | 80 GB                 |
 | **示例 2** | 80                          | 90 GB            | 90 GB                 |
 
-* 示例 1 中，`memory_limit` 为 0，表示使用百分比的配置方式，故以 `memory_limit_percentage` 为准，OceanBase 数据库内存上限为 100 GB\*80%=80 GB。
+* 示例 1 中，`memory_limit` 为 `0M`，表示使用百分比的配置方式，故以 `memory_limit_percentage` 为准，OceanBase 数据库内存上限为 100 GB\*80%=80 GB。
 
 * 示例 2 中，`memory_limit` 为 90 GB，表示使用绝对值的配置方式，故以 `memory_limit` 为准，OceanBase 数据库内存上限为 90 GB。
 
   <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>目前主流的 OceanBase 数据库服务器一般内存为 384 GB 或 512 GB，384 GB 内存建议配置为使用机器内存的 80%，512 GB 内存建议配置为使用机器内存的 90%。</p>
+  <h4>注意</h4>
+  <p>目前主流的 OceanBase 数据库服务器一般内存为 384 GB 或 512 GB，384 GB 内存建议配置为使用机器内存的 80%，512 GB 内存建议配置为使用机器内存的 90%。</p>
   </main>
