--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
@@ -157,19 +157,23 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    <p>三副本下，每个节点启动参数并不完全相同。启动 observer 时只需指定 RootService 所在的 3 台（或者多台）机器，不需要在创建集群时指定所有机器；集群创建完成后可以添加新的机器。</p>
    </main>
 
-   参数里指定数据文件的大小、内存的大小，以方便个别环境资源不足想精确控制observer对资源的占用。具体说明如下：
+   ```shell
+   cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer {-I $ip | -i $devname} -P $rpc_port -p $sql_port -z $zone_name -d /home/admin/oceanbase/store/$cluster_name -r '$ip:2882:2881' -c $cluster_id -n $cluster_name -o "system_memory=30G,datafile_size=100G,config_additional_dir=/data/1/$cluster_name/etc3;/data/log1/$cluster_name/etc2"
+   ```
+
+   **参数解释：**
 
    |**参数**|               **说明**     |
    |--------|----------------------------|
-   | `-i`   | 指定网卡名，可通过 `ifconfig` 命令查看。|
+   | `-I` \| `-i`   | <ul><li>`-I`：指定待启动的节点 IP。在多机部署场景下，不能指定 127.0.0.1 作为目标 IP。建议使用指定 IP（例如：`-I 10.10.10.1`）来启动节点。</li><li>`-i`：指定网卡名，可通过 `ifconfig` 命令查看。</li></ul><main id="notice" type='explain'><h4>说明</h4><p>支持通过同时指定 IP 和网卡名（例如：`-I 10.10.10.1 -i eth0`）来启动节点，但不建议这么用。</p></main>|
    | `-p`   | 指定服务端口号，一般指定为 `2881`。|
    | `-P`   | 指定 RPC 端口号，一般指定为 `2882`。|
    | `-n`   | 指定集群名称。可自定义，不同集群名称不要重复即可。|
    | `-z`   | 指定启动的 observer 进程所属的 Zone。|
-   | `-d`   | 指定集群主目录，除集群名字 `obdemo` 外，其他不要变动。|
+   | `-d`   | 指定集群主目录，初始化目录时创建的目录。除集群名字 `$cluster_name` 外，其他不要变动。|
    | `-c`   | 指定集群 ID。为一组数字，可以自定义，不同集群不要重复即可。|
    | `-l`   | 指定日志级别。|
-   | `-r`   | 指定 RS 列表，格式是 ip:2882:2881 ，分号分割，表示 RootService 信息。三台机器参数一致。|
+   | `-r`   | 指定 RS 列表，格式是 `ip:2882:2881`，分号分割，表示 Root Service 信息。|
    | `-o`   | 指定集群启动参数，需要根据实际情况设置。<ul><li>`system_memory`：指定 OceanBase 内部保留内存，默认是 `30G` ，机器内存比较少的情况下把这个调小，影响就是可能在性能测试时有内存不足问题。</li><li>`datafile_size`：指定 OceanBase 数据文件 `sstable` 的大小（一次性初始化），根据 `/data/1/` 可用空间评估，建议不少于 `100G`，同时又保留一些剩余空间。<blockquote><b>说明</b></br>如果 `/data/1` 跟 `/data/log1` 本身就是一个文件系统（共用一个盘），那么务必保证留给 `/data/log1` 的空间大小是内存的 2-4 倍。</blockquote></li><li>`config_additional_dir` 指定参数文件的冗余目录。</li></ul>|
 
    示例如下：
@@ -178,48 +182,21 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
    ```sql
    [root@xxx admin]# su - admin
-   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
-   devname: eth0
-   rpc port: 2882
-   mysql port: 2881
-   zone: zone1
-   data_dir: /home/admin/oceanbase/store/obdemo
-   rs list: 10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
-   cluster id: 10001
-   appname: obdemo
-   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -I 10.10.10.1 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
    ```
 
    **zone2:**
 
    ```sql
    [root@xxx admin]# su - admin
-   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone2 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
-   devname: eth0
-   rpc port: 2882
-   mysql port: 2881
-   zone: zone2
-   data_dir: /home/admin/oceanbase/store/obdemo
-   rs list: 10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
-   cluster id: 10001
-   appname: obdemo
-   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -I 10.10.10.2 -P 2882 -p 2881 -z zone2 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
    ```
 
    **zone3:**
 
    ```sql
    [root@xxx admin]# su - admin
-   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone3 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
-   devname: eth0
-   rpc port: 2882
-   mysql port: 2881
-   zone: zone3
-   data_dir: /home/admin/oceanbase/store/obdemo
-   rs list: 10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
-   cluster id: 10001
-   appname: obdemo
-   optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -I 10.10.10.3 -P 2882 -p 2881 -z zone3 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
    ```
 
    可以通过下面命令查看 observer 进程是否启动成功：
