--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/1.data-partitioning-and-partitioned-replica-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/1.data-partitioning-and-partitioned-replica-overview.md
@@ -30,7 +30,7 @@ OceanBase 数据库支持以下四种类型的副本：
   
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>V4.0.0 版本仅支持该副本类型。</p>
+    <p>当前版本仅支持该副本类型。</p>
   </main>
 
 * 日志型副本（LOGONLY/L）
