--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
@@ -39,7 +39,6 @@
 |                                          配置项名                                          |               功能描述               |
 |----------------------------------------------------------------------------------------|----------------------------------|
 | [backup_data_file_size](3.cluster-level-configuration-items/15.backup_data_file_size.md)                   | 用于设置备份数据文件的容量。                   |
-| [log_restore_concurrency](3.cluster-level-configuration-items/249.log_restore_concurrency.md)                     | 用于设置恢复日志的并发度。            |
 
 ### 集群相关
 
@@ -375,6 +374,13 @@
 | [ha_mid_thread_score](4.tenant-level-configuration-items/42.ha_mid_thread_score.md) | 用于设置高可用中优先级线程的当前工作线程数。 |
 | [ha_low_thread_score](4.tenant-level-configuration-items/43.ha_low_thread_score.md) | 用于设置高可用低优先级线程的当前工作线程数。 |
 | [ob_compaction_schedule_interval](4.tenant-level-configuration-items/44.ob_compaction_schedule_interval.md) | 用于设置 Compaction 调度的时间间隔。 |
+
+### 备份恢复相关
+
+|    配置项名     |     功能描述   |
+|----------------|----------------|
+| [log_restore_concurrency](4.tenant-level-configuration-items/249.log_restore_concurrency.md) | 用于设置恢复日志的并发度。 |
+| [log_archive_concurrency](4.tenant-level-configuration-items/250.log_archive_concurrency.md) | 用于设置日志归档的并发度。 |
 
 ### 其他
 
