--- a/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/2.system-variable-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/2.system-variable-overview-of-oracle-mode.md
@@ -24,7 +24,7 @@
 | [ob_early_lock_release](65.ob_early_lock_release-of-oracle-mode.md)     | 用于控制事务是否开启提前解锁（ELR）功能。                                              |
 | [ob_trx_idle_timeout](100.ob_trx_idle_timeout-of-oracle-mode.md)       | 用于设置事务空闲超时时间，即事务中两条语句之间的执行间隔超过该值时超时，单位为微秒。                          |
 | [transaction_isolation](129.transaction_isolation-of-oracle-mode.md)     | 用于设置事务的隔离级别。                                                        |
-| [transaction_read_only](130.transaction_read_only-of-oracle-mode.md)     | 用于控制是否只允许开启只读事务。 <br>**说明**<br>  该变量当前暂不生效。 |
+| [transaction_read_only](130.transaction_read_only-of-oracle-mode.md)     | 用于控制是否只允许开启只读事务。  |
 | [ob_trx_lock_timeout](101.ob_trx_lock_timeout-of-oracle-mode.md)       | 用于设置事务的等锁超时时长，单位为微秒。                                                |
 
 ## 字符集和字符串
