V420newfeature-lock_table

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md
@@ -15,11 +15,15 @@
 ## 语法
 
 ```sql
-LOCK TABLE [ schema. ]  table_name 
-IN lock_mode MODE
-[ NOWAIT  
-  | WAIT integer
-   ] ;
+LOCK TABLE 
+  {
+  [ schema. ]  table_name 
+  [ PARTITION '('partition_name ...')' 
+  | SUBPARTITION '('subpartition_name ...')' ] 
+   ...
+  }
+  IN lock_mode MODE
+  [ NOWAIT  | WAIT integer] ;
 ```
 
 ## 语法说明
@@ -27,15 +31,123 @@ IN lock_mode MODE
 | **字段名称** | **描述** |
 | --- | --- |
 | table_name  | 指定要锁定的表的名称。 |
-| lock_mode | 指定锁定模式。OceanBase 数据库当前版本所支持的锁定模式如下：<ul><li>`ROW SHARE`：允许并发访问锁定的表，但禁止用户锁定整个表而进行独占访问。</li><li> `ROW EXCLUSIVE` ：与 `ROW SHARE` 相同，但也禁止在 SHARE 模式下锁定表。在进行更新、插入或删除时，将自动获得 `ROW EXCLUSIVE` 锁。</li><li> `SHARE`：允许并发查询，但禁止更新锁定的表。 </li><li>  `SHARE ROW EXCLUSIVE`：用于查看整个表，并允许其他人查看表中的行，但禁止其他人在 `SHARE` 模式下锁定表或更新行。</li><li> `EXCLUSIVE`：只允许对锁定的表进行查询，禁止对其进行其他操作。</li></ul>  |
-| NOWAIT | 如果对执行的表、分区或者二级分区上锁时发生锁冲突，则指定 `NOWAIT` 可以让数据库立即将控制权返回给您。在这种情况下，数据库会返回一条消息，以告知表、分区或子分区已被另一个用户锁定。 |
-| WAIT | 如果发生锁冲突，那么语句应该等待冲突的锁释放，直到超时。`integer` 的值没有限制。<br>**说明** OceanBase 数据库当前版本的 `NOTWAIT` 和 `WAIT` 都不生效，使用的是所设置的语句超时时间和事务的超时时间的最小值，即等待锁定直到语句超时或者事务超时。</br> |
+| partition_name | 指定要锁定的分区的名称。 |
+| subpartition_name | 指定要锁定的二级分区的名称。|
+| lock_mode | 指定锁定模式。OceanBase 数据库当前版本所支持的锁定模式如下：<ul><li>`ROW SHARE`：允许并发访问锁定的表，但禁止用户锁定整个表而进行独占访问。</li><li> `ROW EXCLUSIVE` ：与 `ROW SHARE` 相同，但也禁止在 `SHARE` 模式下锁定表。在进行更新、插入或删除时，将自动获得 `ROW EXCLUSIVE` 锁。</li><li> `SHARE`：允许并发查询，但禁止更新锁定的表。 </li><li>  `SHARE ROW EXCLUSIVE`：用于查看整个表，并允许其他用户查看表中的行，但禁止其他用户在 `SHARE` 模式下锁定表或更新行。</li><li> `EXCLUSIVE`：只允许对锁定的表进行查询，禁止对其进行其他操作。</li></ul>  |
+| NOWAIT | 如果对执行的表、分区或者二级分区上锁时发生锁冲突，则指定 `NOWAIT` 可以让数据库立即将控制权返回给用户。在这种情况下，数据库会返回一条消息，以告知表、分区或子分区已被另一个用户锁定。 |
+| WAIT | 如果发生锁冲突，那么语句应该等待冲突的锁释放，直到超时，即用户设置的 `interger` 时间（单位为秒）。`integer` 的取值没有限制。 |
 
 ## 示例
 
-以 `EXCLUSIVE` 模式锁定 `tbl1` 表，但如果其他用户已锁定该表，则不会等待。
+如下示例为创建二级分区表并对其执行分区上锁操作。
 
-```sql
-obclient> LOCK TABLE tbl1 IN EXCLUSIVE MODE NOWAIT; 
-Query OK, 0 row affected
-```
+1. 创建二级分区表 `test`。其中，由 `SUBPARTITION TEMPLATE` 生成的二级分区名称为一级分区名称 + 's' + 二级分区模板名称，例如，`p0` 分区有二级分区 `p0ssp0`，`p0ssp1` 和 `p0ssp2`。
+
+   ```shell
+   create table test(col1 int, col2 int)
+   partition by range (col1)
+   subpartition by range (col2)
+     subpartition template
+       (
+       subpartition sp0 values less than (3),
+       subpartition sp1 values less than (6),
+       subpartition sp2 values less than (9)
+       )
+   (
+     partition p0 values less than (100),
+     partition p1 values less than (200),
+     partition p2 values less than (300)
+   );
+   ```
+
+2. 对整个表 `test` 上互斥锁。
+
+   ```shell
+   obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+   ```
+
+3. 对表 `test` 的一级分区 `p1` 上互斥锁。
+
+   ```shell
+   obclient> LOCK TABLE test PARTITION (p1) IN EXCLUSIVE MODE;
+   ```
+
+4. 对表 `test` 的二级分区 `p1ssp1` 上互斥锁。
+
+   ```shell
+   obclient> LOCK TABLE test SUBPARTITION (p1ssp1) IN EXCLUSIVE MODE;
+   ```
+
+5. 对表 `test` 的多个分区上互斥锁。
+
+   ```shell
+   obclient> LOCK TABLE test PARTITION (p1，p2) IN EXCLUSIVE MODE;
+   ```
+
+6. 对表 `test` 的多个二级分区上互斥锁。
+  
+   ```shell
+   obclient> LOCK TABLE test SUBPARTITION (p0ssp1，p1ssp2) IN EXCLUSIVE MODE;
+   ```
+
+7. 对表 `test` 的多个分区和二级分区上互斥锁。
+
+   ```shell
+   obclient> LOCK TABLE test PARTITION (p1, p2), test SUBPARTITION (p3ssp0, p3ssp1) IN EXCLUSIVE MODE;
+   ```
+
+8. 对表 `test` 不存在的分区上互斥锁。如下示例中 `p3` 分区不存在，但是 `p0` 分区也不会上锁成功，整条语句将回滚。
+
+   ```shell  
+   obclient> LOCK TABLE test PARTITION (p0, p3) IN EXCLUSIVE MODE;
+   ERROR HY000: Specified partition does not exist
+   ```
+
+9. 在两个客户端上分别对表 `test` 上锁，其中持锁客户端上互斥锁，请求锁客户端上共享锁。
+   当 `LOCK TABLE` 语句不设置 `WAIT N`/`NOWAIT` 关键字时，其超时时间将取决于语句超时时间和事务超时时间的最小值，在该示例中即为 1 秒后将报出锁冲突的错误。
+ 
+   ```shell
+   # conn1
+   obclient> START TRANSACTION;
+   obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+
+   # conn2
+   obclient> START TRANSACTION;
+   obclient> SET ob_trx_timeout = 10000000000; # 10000 秒
+   obclient> SET ob_query_timeout = 1000000;   # 1 秒
+
+   # 请求客户端在 1 秒后将报出锁冲突的错误
+   obclient> LOCK TABLE test IN SHARE MODE;
+   ERROR HY000: resource busy and acquire with NOWAIT specified or timeout expired
+   ```
+
+10. 在两个客户端上分别对表 `test` 上表锁，其中持锁客户端上互斥锁，请求锁客户端上共享锁，并使用 `NOWAIT` 关键字。
+   当 `LOCK TABLE` 语句设置了 `NOWAIT` 关键字后，如果遇到表锁冲突将会立即报错，并在报错信息中体现“NOWAIT”信息。该报错信息与语句不设置 `WAIT N`/`NOWAIT` 关键字不同。
+
+    ```shell
+    # conn1
+    obclient> START TRANSACTION;
+    obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+
+    # conn2
+    obclient> START TRANSACTION;
+    obclient> LOCK TABLE test IN SHARE MODE NOWAIT;
+    ERROR HY000: resource busy and acquire with NOWAIT specified or timeout  expired
+    ``` 
+  
+ 11. 在两个客户端上分别对表 `test` 上表锁，其中持锁客户端上互斥锁，请求锁客户端上共享锁，并使用 `WAIT N` 关键字。
+    当 `LOCK TABLE` 语句设置了 `WAIT N` 关键字后，如果遇到表锁冲突将会等待 N 秒，在 N 秒后未解锁将报错，并在报错信息中体现“timeout expired”信息。该报错信息与语句不设置 `WAIT N`/`NOWAIT` 关键字不同。
+
+     ```shell
+     # conn1
+     start transaction;
+     lock table test in exclusive mode;
+
+     # conn2
+     start transaction;
+
+     # client will get error code after 1 second
+     lock table test in share mode wait 1;
+     ERROR HY000: resource busy and acquire with NOWAIT specified or timeout expired
+     ```
+
