--- a/zh-CN/2.quickstart/8.tutorial-list.md
+++ b/zh-CN/2.quickstart/8.tutorial-list.md
@@ -86,6 +86,12 @@
 
 <video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/09%20%E5%9C%A8%20oceanbase%20%E6%95%B0%E6%8D%AE%E5%BA%93%E4%B8%8A%E8%BF%9B%E8%A1%8C%20tpc-c%20%E6%B5%8B%E8%AF%95.mp4" controls="" width="811px" height="456.188px"></video>
 
+## 体验 OceanBase 数据库热点行更新能力
+
+本视频中，我们将通过构造一个多并发单行更新的场景，介绍 OceanBase 数据库 ELR 特性的使用方法和效果对比。
+
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/10%20%E7%83%AD%E7%82%B9%E8%A1%8C_1.mp4" controls="" width="811px" height="456.188px"></video>
+
 ## 体验 Operational OLAP
 
 本视频带您体验 OceanBase 的 Operational OLAP 功能。
