--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md
@@ -286,6 +286,7 @@ unpivot_in_clause：
   
   ```shell
   obclient> CREATE TABLE group_tbl1 (group_id INT,job VARCHAR2(10),name VARCHAR2(10),salary INT);
+  Query OK, 0 rows affected
 
   obclient> INSERT INTO group_tbl1 VALUES(10,'Coding','Bruce',1000),
       (10,'Programmer','Clair',1000),
@@ -293,6 +294,8 @@ unpivot_in_clause：
       (20,'Programmer','Joey',2000),
       (30,'Coding','Rebecca',3000),
       (30,'Programmer','Rex',3000);
+  Query OK, 6 rows affected 
+  Records: 6  Duplicates: 0  Warnings: 0
 
    obclient> SELECT * FROM group_tbl1;
    +----------+------------+---------+--------+
@@ -305,6 +308,7 @@ unpivot_in_clause：
    |       30 | Coding     | Rebecca |   3000 |
    |       30 | Programmer | Rex     |   3000 |
    +----------+------------+---------+--------+
+   6 rows in set
 
    obclient> SELECT group_id, salary, SUM(salary) FROM group_tbl1 GROUP BY CUBE (group_id, salary);
    +----------+--------+-------------+
@@ -321,6 +325,7 @@ unpivot_in_clause：
    |       20 |   2000 |        4000 |
    |       30 |   3000 |        6000 |
    +----------+--------+-------------+
+   10 rows in set
    ```
 
 * 从表 `tbl1` 中按 `name` 和 `num` 分组查询并统计每个分组中的数量。
