--- a/zh-CN/2.quickstart/8.tutorial-list.md
+++ b/zh-CN/2.quickstart/8.tutorial-list.md
@@ -30,7 +30,7 @@
 
     * [体验 OceanBase 数据库热点行更新能力](#体验%20OceanBase%20数据库热点行更新能力)
 
-    * [体验 Operational OLAP](#体验%20Operational%20OLAP%20)
+    * [体验 Operational OLAP](#体验%20Operational%20OLAP)
 
     * [体验并行导入 & 数据压缩](#体验并行导入%20&%20数据压缩)
 
